--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
                         <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
+                        <a class="nav-link me-lg-3" href="#awards">SELECTED AWARDS</a>
                     </li>
-
+		 <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#awards">BLOGS</a>
+                    </li>
                 </ul>
             </div>
         </div>
