--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </nav>
 
     <!-- Top Section -->
-    <section class="top-section" style="background-image: url('static/assets/img/background.jpeg');">
+    <section class="top-section" style="background-image: url('static/assets/img/background.jpg');">
         <div class="top-section-content">
             <div class="container px-5">
                 <h2 id="top-section-bg-text" class="text-white display-3 lh-1 font-alt"></h2>
@@ -161,6 +161,17 @@
     </section>
     <!-- Awards -->
 
+ <!-- Blogs -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="blogs">
+        <div class="container px-5">
+            <header>
+                <h2 id="blogs-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;BLOGS</h2>
+            </header>
+            <div class="main-body" id="blogs-md"></div>
+
+        </div>
+    </section>
+    <!-- Blogs  -->
 
     <!-- Footer-->
     <footer class="bg-bottom text-center py-5">
