--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <a class="nav-link me-lg-3" href="#awards">SELECTED AWARDS</a>
                     </li>
 		 <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards">BLOGS</a>
+                        <a class="nav-link me-lg-3" href="#blogs">BLOGS</a>
                     </li>
                 </ul>
             </div>
